# libwifi

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  COPYING  LICENSE  README.md
.github/workflows/: linux_x86.yml  macos_x86.yml  x86_64.yml
benchmark/: Makefile  benchmark_beacon.c
examples/generate_beacon/: Makefile  README.md  generate_beacon.c
examples/generate_rtscts/: Makefile  README.md  generate_rtscts.c
examples/parse_beacon/: Makefile  README.md  parse_beacon.c
examples/parse_eapol/: Makefile  README.md  parse_eapol.c
scripts/: generate_entry_header.sh
src/: libwifi.h
src/libwifi/core/: core.c  core.h
src/libwifi/core/frame/: crc.c  crc.h  frame.c  frame.h  tag.c  tag.h  tag_iterator.c  tag_iterator.h
src/libwifi/core/frame/control/: cts.h  rts.h
src/libwifi/core/frame/data/: data.h
src/libwifi/core/frame/management/: action.h  assoc_request.h  assoc_response.h  atim.h  authentication.h  beacon.h  common.h  deauthentication.h  disassociation.h  probe_request.h  probe_response.h  reassoc_request.h  reassoc_response.h  timing_ad.h
src/libwifi/core/misc/: byteswap.h  epoch.c  epoch.h  llc.h  radiotap.h  security.h  types.h
src/libwifi/core/radiotap/: platform.h  radiotap.c  radiotap.h  radiotap_iter.h
src/libwifi/parse/data/: data.c  data.h  eapol.c  eapol.h
src/libwifi/parse/management/: assoc_request.c  assoc_request.h  assoc_response.c  assoc_response.h  beacon.c  beacon.h  common.c  common.h  deauthentication.c  deauthentication.h  disassociation.c  disassociation.h  probe_request.c  probe_request.h  probe_response.c  probe_response.h  reassoc_request.c  reassoc_request.h  reassoc_response.c  reassoc_response.h
src/libwifi/parse/misc/: radiotap.c  radiotap.h  security.c  security.h
test/: CMakeLists.txt  README.md
test/pcaps/: assoc_req.pcap  deauth.pcap  probe_req.pcap  probe_resp_with_221.pcap  reassoc_req.pcap  reassoc_resp.pcap
test/src/: action_tests.c  assoc_req_tests.c  assoc_resp_tests.c  atim_tests.c  auth_tests.c  beacon_tests.c  deauth_tests.c  disassoc_tests.c  helpers.c  probe_req_tests.c  probe_resp_tests.c  reassoc_req_tests.c  reassoc_resp_tests.c  test_generation.c  test_misc.c  test_parsing.c  timing_ad_tests.c
utils/: .clang-format  CMakeLists.txt
utils/pcaps/: assoc_resp.pcap  auth.pcap  beacons_with_221.pcap  deauth_with_221.pcap  disassoc.pcap
utils/src/: helpers.h  test_generation.c  test_parsing.c
